--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,27 @@
       "email": "razvan@ceana.ro"
     }
   ],
+  "require": {
+    "php": ">=7.1 || ^8.0",
+    "ext-json": "*"
+  },
   "require-dev": {
-    "ergebnis/composer-normalize": "^2.45"
+    "captainhook/captainhook": "^5.24",
+    "ergebnis/composer-normalize": "^2.45",
+    "phpunit/phpunit": "^10.0",
+    "ramsey/conventional-commits": "^1.5",
+    "symfony/console": "^6.0 || ^7.0",
+    "symfony/translation": "^6.0 || ^7.0",
+    "vimeo/psalm": "^5.26"
   },
   "autoload": {
     "psr-4": {
       "Xterr\\CaenCodes\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Xterr\\CaenCodes\\Tests\\": "tests/"
     }
   },
   "config": {
